Fix right overflow on mobile screens

--- a/swellnote/static/index.css
+++ b/swellnote/static/index.css
@@ -111,7 +111,7 @@ body {
 }
 
 .bottom-button {
-  --side-margin: 3%;
+  --side-margin: 5%;
   --size: 64px;
   position: absolute;
   bottom: 21%;
